# cheogram-sip

./: README.md  RedisURL.hs  Util.hs  cheogram-sip.cabal  extensions.lua  gateway.hs  guix.scm
.builds/: debian-stable.yml  guix.yml
asterisk-conf/: extensions.lua  motif.conf  rtp.conf  xmpp.conf
docker/: Dockerfile  entrypoint.sh
